@@ -1,6 +1,9 @@
 package md.utm.lab1;
 
+import md.utm.lab2.ChomskyType;
+
 import java.util.*;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
@@ -19,6 +22,8 @@ public class Grammar {
 
     // start letter
     private final Letter S;
+    private ChomskyType type;
+
 
     public Grammar(Set<Letter> V_N, Set<Letter> V_T, Set<DeriveRule> productions, Letter S) {
 
@@ -46,24 +51,145 @@ public class Grammar {
         this.S = S;
     }
 
-    public boolean isRegular() {
-        for (DeriveRule rule : P) {
-            List<Letter> from = rule.getFrom();
-            List<Letter> to = rule.getTo();
+    /**
+     * The classification of grammar works the following way:
+     * <br>
+     * 1) Filters the rules by the 'from' part.
+     * <br>
+     * 2) If the set's size is 0, it's either third or second type
+     * <br>
+     * 3) To find out, the filter of regularity happens
+     * <br>
+     * 4) If some elements left from the 2. step, the next filter is performed: context-sensitive one
+     * <br>
+     * 5) If some elements left, it's the 0th type
+     * @return Chomsky type of the grammar
+     */
+    public ChomskyType getChomskyType(boolean reasoning) {
 
-            if (from.size() != 1 || !V_N.contains(from.getFirst())) {
-                return false;
+
+        Predicate<DeriveRule> beforeTransitionOneLetterFilter = rule -> rule.getFrom().size() == 1 && V_N.contains(rule.getFrom().getFirst());
+
+        Predicate<DeriveRule> afterTransitionRegularityFilter = rule -> {
+
+            List<Integer> terminalIndexes = IntStream.range(0, rule.getFrom().size())
+                    .filter(index -> V_T.contains(rule.getFrom().get(index)))
+                    .boxed()
+                    .toList();
+
+            // either the transition is in the form T -> xxxewerewer
+
+            if (terminalIndexes.isEmpty()) {
+                return true;
             }
 
-            if (to.isEmpty() || !V_T.contains(to.get(0))) {
-                return false;
+            // or there is T -> Tmdsfksmd - one terminal, and it's either the first or the last symbol
+            return terminalIndexes.size() == 1 && Set.of(0, rule.getFrom().size() - 1).contains(terminalIndexes.getFirst());
+        };
+
+        Predicate<Collection<DeriveRule>> sameRegularitySide = rules -> {
+            boolean hasLeftRegular = false;
+            boolean hasRightRegular = false;
+
+            for (DeriveRule rule : rules) {
+                List<Letter> to = rule.getTo();
+
+                // Skip rules with only terminals
+                if (V_T.containsAll(to)) {
+                    continue;
+                }
+
+                // Find position of non-terminal
+                int nonTerminalIndex = to.indexOf(to.stream()
+                        .filter(V_N::contains)
+                        .findFirst()
+                        .orElse(null));
+
+                // Left-regular: non-terminal at the end
+                if (nonTerminalIndex == to.size() - 1) {
+                    hasLeftRegular = true;
+                }
+                // Right-regular: non-terminal at the start
+                else if (nonTerminalIndex == 0) {
+                    hasRightRegular = true;
+                }
+
+                if (hasLeftRegular && hasRightRegular) {
+                    return false;
+                }
             }
 
-            if (to.size() > 1 && (!V_N.contains(to.get(1)) || to.size() > 2)) {
-                return false;
+            return true;
+        };
+
+
+        // main action happens from here
+
+        Set<DeriveRule> firstStep =  new HashSet<>(P);
+
+        // translation to human: second step - true - holds all the rules where the 'from' part is simply one letter
+        Map<Boolean, List<DeriveRule>> secondStepMap = firstStep.stream().collect(Collectors.partitioningBy(beforeTransitionOneLetterFilter));
+
+        if (reasoning) System.out.println(secondStepMap);
+        if (secondStepMap.get(false).isEmpty()) {
+            if (reasoning) System.out.println("The second step which devided the rules into the 'the before part has one symbol' and 'the before part has more than one symbol' concluded that all the rules were in form A->something, so it's either TYPE2 or TYPE3");
+
+            Set<DeriveRule> secondStep = new HashSet<>(secondStepMap.get(true));
+
+
+            // third step: all the rules from the second step which are regular
+            Set<DeriveRule> thirdStep = secondStep.stream().filter(afterTransitionRegularityFilter).collect(Collectors.toSet());
+
+            if (thirdStep.size() < secondStep.size()) {
+                if (reasoning) System.out.println("After the filter of regularity in 'to' part, some rules are defined as not regular. That means, the type is TYPE-2 ");
+                return ChomskyType.TYPE2;
+            }
+
+            // this else is: third step size == second step size => all the rules are regular.
+            else {
+
+                // now we check the regularity side: if the rules are or right regular or left regular, not mixed
+                if (sameRegularitySide.test(thirdStep)) {
+                    if (reasoning) {
+                        System.out.println(thirdStep);
+
+                    System.out.println("The same regularity test showed true. Returning that the type is TYPE-3");
+                    }
+                    return ChomskyType.TYPE3;
+                } else {
+                    if (reasoning) System.out.println("The same regularity test showed false. Returning that the type is TYPE-2");
+                    return ChomskyType.TYPE2;
+                }
+            }
+
+        }
+        boolean isContextSensitive = true;
+
+        for (DeriveRule rule : secondStepMap.get(false)) {
+            if (rule.getFrom().size() > rule.getTo().size()) {
+                isContextSensitive = false;
+                break;
             }
         }
-        return true;
+
+        boolean hasSEpsilonRule = P.stream()
+                .anyMatch(rule -> rule.getFrom().size() == 1 && rule.getFrom().getFirst().equals(S) && rule.getTo().getFirst().equals(Letter.EPSILON));
+
+        if (hasSEpsilonRule) {
+            if (reasoning) System.out.println("The grammar contains the rule S -> ε, which is allowed in context-sensitive grammars.");
+        }
+
+        if (isContextSensitive || hasSEpsilonRule) {
+            if (reasoning) System.out.println("All rules satisfy the context-sensitive condition. The grammar is Type 1.");
+            return ChomskyType.TYPE1;
+        } else {
+            if (reasoning) System.out.println("Some rules violate the context-sensitive condition. The grammar is Type 0.");
+            return ChomskyType.TYPE0;
+        }
+    }
+
+    public boolean isRegular() {
+        return getChomskyType(false) == ChomskyType.TYPE3;
     }
 
     public FiniteAutomaton toFiniteAutomation() {
@@ -74,17 +200,31 @@ public class Grammar {
 
         Set<Transition> delta = new HashSet<>();
 
-        // transform rules in transitions
-        P.forEach(rule -> delta.add(
-                new Transition(
-                        rule.getFrom().getFirst(),
-                        rule.getTo().getFirst(),
-                        rule.getTo().size() == 2 ? rule.getTo().get(1) : Letter.F
-                )));
+        for (DeriveRule rule : P) {
+            Letter first = rule.getFrom().getFirst(); // for sure it's just one
 
-        System.out.println(delta);
+            List<Letter> to = rule.getTo();
+            if (to.size() == 1) {
+                delta.add(new Transition(first, to.getFirst(), Letter.F));
+            }
+            else if (to.size() > 2) {
+                throw new RuntimeException("We don't know how to deal with exptended grammar in FA contruction");
+            }
+            else {
 
-        // add to states all the non-terminal plus final
+                Optional<Letter> terminalOpt = to.stream().filter(V_T::contains).findFirst();
+
+                int terminalIndex = terminalOpt
+                        .map(to::indexOf)
+                        .orElseThrow(() -> new RuntimeException("We don't know how to deal with extended grammar in FA construction"));
+
+                delta.add(
+                        new Transition(first, to.get(terminalIndex), to.get(1 - terminalIndex))
+                );
+            }
+
+        }
+
         Set<State> states = new HashSet<>(V_N);
         Set<AlphabetSymbol> alphabet = new HashSet<>(V_T);
         states.add(Letter.F);
